# bananas31-operator-cockpit

./: .gitignore  Dockerfile  README.md  docker-compose.preview.yml  package.json  pnpm-lock.yaml
apps/web/: README.md  index.html  package.json
apps/web/src/: main.js  styles.css
apps/web/src/lib/: api.js  chartSync.js  cockpitState.js  diagnostics.js  formatters.js  layoutState.js  replay.js  viewConfig.js
apps/web/tests/: api.test.mjs  chartSync.test.mjs  cockpitState.test.mjs  diagnostics.test.mjs  formatters.test.mjs  layoutState.test.mjs  replay.test.mjs  viewConfig.test.mjs
docs/plans/: 2026-03-30-bananas31-operator-cockpit-design.md  2026-03-30-bananas31-operator-cockpit-implementation.md
scripts/: add_project.py  check-bootstrap.mjs
services/api/: README.md  pyproject.toml
services/api/app/: config.py  db.py  main.py
services/api/scripts/: backfill_price_history.py  seed_demo_db.py  seed_sample_db.py
services/api/tests/: test_api.py  test_config.py  test_projects_registry.py  test_replay_api.py
services/collectors/: README.md  backfill_metrics.py  backfill_ohlcv.py  minute_poller.py
services/shared/: __init__.py  projects.json  projects.py  schema.py
