[project]
name = "bananas31-api"
version = "0.1.0"
description = "History-first analytics API for the BANANAS31 operator cockpit."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0"
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.1"
]

[tool.pytest.ini_options]
pythonpath = ["."]

